--- a/index.css
+++ b/index.css
@@ -1,17 +1,38 @@
+* {
+  font-family: "Montserrat", sans-serif;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .header {
   height: 400px;
   background-image: url(img/josefin-HtCgLIDy-2U-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
+
 #main-sum {
   margin: 0;
-
   background-color: rgb(7, 31, 10);
   font-size: xx-large;
+}
+
+input,
+select,
+button {
+  padding: 10px;
+  margin: 5px;
+  font-size: medium;
 }
 
 .row {
@@ -19,13 +40,18 @@
   justify-content: space-evenly;
 }
 
-h2 {
+.col {
+  height: auto;
+  background-color: rgb(153, 179, 153);
+  border: 2px solid rgb(99, 116, 99);
+}
+
+h2,
+.saldo {
   text-align: center;
 }
 
 li {
   padding: 5px;
-}
-button {
-  margin: 5px;
+  font-weight: bold;
 }
